# falcon

./: .env.example  .gitignore  README.md  SCREENER_DESIGN.md  pyproject.toml  pytest.ini  run_tests.sh  test_connection.py
falcon/: __init__.py  config.py  connection.py  database.py  library.py  main.py  screen_cli.py  screener.py  strategy.py
tests/: __init__.py  conftest.py  test_config.py  test_connection.py  test_database.py  test_library.py  test_main.py  test_screener.py  test_strategy.py
